--- a/style.css
+++ b/style.css
@@ -18,3 +18,34 @@ body {
   	background-color: lightpink;
    	font-size: 20px;
   }
+
+  .menu{
+  	box-sizing: border-box;
+
+  }
+
+  #button{
+  	display: inline-block;
+  	text-align: center;
+  	font-size: 20px;
+  }
+
+.overview {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image {
+	float: left;
+}
+
+.text {
+	font-size: 45px;
+	float: left;
+}
+
+#link {
+	background-color: blueviolet;
+}
+.
